package com.qrart.viewmodel

import android.app.Application
import android.graphics.Bitmap
import android.net.Uri
import androidx.compose.runtime.getValue
import androidx.compose.runtime.mutableStateOf
import androidx.compose.runtime.setValue
import androidx.lifecycle.AndroidViewModel
import androidx.lifecycle.viewModelScope
import com.qrart.data.QRDatabase
import com.qrart.data.QRHistory
import com.qrart.drawing.DotStyle
import com.qrart.drawing.ErrorLevel
import com.qrart.drawing.FrameType
import com.qrart.drawing.QRRenderer
import kotlinx.coroutines.launch
import java.io.File
import java.io.FileOutputStream

class QRViewModel(application: Application) : AndroidViewModel(application) {

    private val renderer = QRRenderer()
    private val db = QRDatabase.getDatabase(application)
    private val historyDao = db.qrHistoryDao()

    // Input state
    var text by mutableStateOf("https://www.youtube.com/@diegodebian")
    var qrColor by mutableStateOf(0xFF0F172A.toInt())
    var bgColor by mutableStateOf(0xFFFFFFFF.toInt())
    var dotStyle by mutableStateOf(DotStyle.SQUARE)
    var frameType by mutableStateOf(FrameType.NONE)
    var errorLevel by mutableStateOf(ErrorLevel.H)
    var logoBitmap by mutableStateOf<Bitmap?>(null)

    // UI state
    var generatedBitmap by mutableStateOf<Bitmap?>(null)
    var hasGenerated by mutableStateOf(false)
    var isGenerating by mutableStateOf(false)
    var errorMessage by mutableStateOf<String?>(null)
    // History
    val history = historyDao.getAllHistory()
    var selectedTab by mutableStateOf(0)

    fun generateQR() {
        if (text.isBlank()) {
            errorMessage = "Introduce un texto o URL"
            return
        }

        isGenerating = true
        errorMessage = null

        viewModelScope.launch {
            try {
                val bitmap = renderer.generateQR(
                    text = text,
                    dotStyle = dotStyle,
                    frameType = frameType,
                    errorLevel = errorLevel,
                    qrColor = qrColor,
                    bgColor = bgColor,
                    logoBitmap = logoBitmap
                )
                generatedBitmap = bitmap
                hasGenerated = true

                // Save to history
                historyDao.insert(
                    QRHistory(
                        content = text,
                        type = "generated",
                        dotStyle = dotStyle.name,
                        frameType = frameType.name,
                        qrColor = qrColor,
                        bgColor = bgColor
                    )
                )
            } catch (e: Exception) {
                errorMessage = "Error: ${e.message}"
            } finally {
                isGenerating = false
            }
        }
    }

    fun saveQRToGallery(bitmap: Bitmap): String? {
        return try {
            val app = getApplication<Application>()
            val dir = File(app.getExternalFilesDir(null), "Iguaque QR")
            if (!dir.exists()) dir.mkdirs()

            val fileName = "QR_${System.currentTimeMillis()}.png"
            val file = File(dir, fileName)
            FileOutputStream(file).use { out ->
                bitmap.compress(Bitmap.CompressFormat.PNG, 100, out)
            }

            // Add to gallery via MediaStore
            val values = android.content.ContentValues().apply {
                put(android.provider.MediaStore.Images.Media.DISPLAY_NAME, fileName)
                put(android.provider.MediaStore.Images.Media.MIME_TYPE, "image/png")
                put(android.provider.MediaStore.Images.Media.RELATIVE_PATH, "Pictures/Iguaque QR")
            }

            val uri = app.contentResolver.insert(
                android.provider.MediaStore.Images.Media.EXTERNAL_CONTENT_URI,
                values
            )

            uri?.let {
                app.contentResolver.openOutputStream(it)?.use { os ->
                    bitmap.compress(Bitmap.CompressFormat.PNG, 100, os)
                }
                "Imagen guardada en Galería"
            } ?: file.absolutePath

        } catch (e: Exception) {
            "Error al guardar: ${e.message}"
        }
    }

    fun shareQR(bitmap: Bitmap) {
        try {
            val app = getApplication<Application>()
            val file = File(app.cacheDir, "share_qr.png")
            FileOutputStream(file).use { out ->
                bitmap.compress(Bitmap.CompressFormat.PNG, 100, out)
            }

            val uri = androidx.core.content.FileProvider.getUriForFile(
                app,
                "${app.packageName}.fileprovider",
                file
            )

            val intent = android.content.Intent(android.content.Intent.ACTION_SEND).apply {
                type = "image/png"
                putExtra(android.content.Intent.EXTRA_STREAM, uri)
                clipData = android.content.ClipData.newRawUri("QR", uri)
                addFlags(android.content.Intent.FLAG_GRANT_READ_URI_PERMISSION)
            }
            val chooser = android.content.Intent.createChooser(intent, "Compartir QR").apply {
                addFlags(android.content.Intent.FLAG_ACTIVITY_NEW_TASK)
                addFlags(android.content.Intent.FLAG_GRANT_READ_URI_PERMISSION)
            }

            app.startActivity(chooser)
        } catch (e: Exception) {
            errorMessage = "No se pudo compartir el QR"
        }
    }

    fun deleteHistoryItem(item: QRHistory) {
        viewModelScope.launch {
            historyDao.delete(item)
        }
    }

    fun clearHistory() {
        viewModelScope.launch {
            historyDao.deleteAll()
        }
    }

    fun clearError() {
        errorMessage = null
    }
}
